<resources>
    <string name="app_name">FileReaderAndWriter</string>
    <string name="redactor">Редактировать</string>
    <string name="reader">Просмотр</string>
    <string name="settings">Настройки</string>
    <string name="create_file">Создать файл</string>
    <string name="_20sp">20sp</string>
    <string name="_30sp">30sp</string>
    <string name="_40sp">40sp</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
</resources>