<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:id="@+id/set_size_text"
        style="@style/base_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/set_color_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton"
            style="@style/base_radio_btn.is_checked"
            android:text="@string/_20sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton2"
            style="@style/base_radio_btn"
            android:text="@string/_30sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton3"
            style="@style/base_radio_btn"
            android:text="@string/_40sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/set_color_text"
        style="@style/base_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/set_size_text"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton4"
            style="@style/base_radio_btn.is_checked"
            android:text="@string/red" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton5"
            style="@style/base_radio_btn"
            android:text="@string/blue" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton6"
            style="@style/base_radio_btn"
            android:text="@string/green" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>