<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/redactor_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redactor"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/settings_btn"
        app:layout_constraintEnd_toStartOf="@+id/reader_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reader_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reader"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/redactor_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_file"
        app:layout_constraintBottom_toTopOf="@+id/settings_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redactor_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>